# projext-x

./: .env.example  .gitignore  .pre-commit-config.yaml  BATCHES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3d7569818ac0_initial_schema.py
docs/: ENGINEERING_STANDARDS.md
flipflow-android/: app.json  package-lock.json  package.json
flipflow-android/app/: _layout.tsx
flipflow-android/app/(tabs)/: _layout.tsx  index.tsx  listings.tsx  settings.tsx  tools.tsx  zombies.tsx
flipflow-android/app/listing/: [id].tsx
flipflow-android/components/: ActionButton.tsx  ErrorBanner.tsx  ListingCard.tsx  SectionHeader.tsx  StatCard.tsx  StatusBadge.tsx
flipflow-android/lib/: api.ts  storage.ts  types.ts  useApi.ts
src/flipflow/: __init__.py
tests/: CLAUDE.md  conftest.py
tests/api/: conftest.py  test_auth.py  test_health.py  test_listings_api.py
tests/integration/: test_db_models.py
tests/unit/: test_auto_relister.py  test_config.py  test_kickstarter.py  test_mobile_enforcer.py  test_offer_sniper.py  test_photo_shuffler.py  test_profit_floor.py  test_purgatory.py  test_repricer.py  test_resurrector.py  test_smart_queue.py  test_store_pulse.py  test_str_enforcer.py  test_title_sanitizer.py  test_zombie_killer.py
ui/: ab-test.html  dashboard.html  index.html  onboarding.html  scanner-results.html  zombie-killer.html
(+86 files in other folders)
